more endpoints + cors widen
